--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=PUBLIC
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://mariadb:3306/uboeventflow_bdd
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+server.port=8084
+#spring.jpa.hibernate.ddl-auto=update
