--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#datasource configurations
+spring.datasource.url=jdbc:mysql://mariadb:3306/uboeventflow_bdd
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+server.port=8084
+#spring.jpa.hibernate.ddl-auto=update
