--- a/application.properties
+++ b/application.properties
@@ -6,4 +6,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 server.port=8084
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.hibernate.ddl-auto=update
